@@ -4,6 +4,8 @@ Changelog
 2.13.10 (unreleased)
 --------------------
 
+- Removed tracking of result length from the query plan. The calculation of the
+  length of an intermediate index result can itself be expensive.
 
 2.13.9 (2011-04-10)
 -------------------
